Fix ahjo image overflow on mobile

--- a/public/themes/custom/hdbt_subtheme/src/scss/06_components/content/_issue.scss
+++ b/public/themes/custom/hdbt_subtheme/src/scss/06_components/content/_issue.scss
@@ -299,6 +299,10 @@
     text-decoration: none;
   }
 
+  img {
+    width: 100%;
+  }
+
   .SisaltoSektio, .accordion-item__content__inner {
     ul, ol {
       padding-top: 0;
